Fixed message text overflow

--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -8,15 +8,6 @@
   }
 }
 
-.message {
-  color: white;
-  background: #232324;
-
-  border-radius: 0.3em;
-  padding: 0.6em;
-  font-size: 1em;
-}
-
 .right {
   .message {
     background-color: #4158D0;
@@ -27,4 +18,15 @@
 
 .left {
   flex-direction: row;
+}
+
+.message {
+  color: white;
+  background: #232324;
+
+  border-radius: 0.3em;
+  padding: 0.6em;
+  font-size: 1em;
+  word-wrap: break-word;
+  max-width: 100%;
 }
