--- a/src/domain/Chat/Messages/Messages.module.scss
+++ b/src/domain/Chat/Messages/Messages.module.scss
@@ -1,9 +1,6 @@
 .root {
   font-size: 1rem;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
   position: relative;
   overflow-y: auto;
 }
@@ -12,8 +9,11 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .messages {
+  margin-top: auto;
   padding: 0.8em;
 }
